docs/tests/syntax/good/testfile-assign-1.cpp
void m() { int x; int y; y = x = 0; }
