docs/tests/syntax/bad/testfile-expr3-1.cpp
void f() { 0 <> 0; }
